Added Output Section

--- a/index.html
+++ b/index.html
@@ -32,14 +32,20 @@
   <div class="dvs">
       <h1>Variables</h1>
       <div class="cntnt">    <object data="./1. Variables.py" font-size="25" width="300" height="400"></object></div>
+      <p class="output">Output</p>
+      Orange <br/>Banana <br/>Banana <br/><class 'int'> <br/>John is 5 <br/>Name is John <br/>
   </div>
   <div class="dvs">
     <h1>Numbers</h1>
     <div class="cntnt">  <object data="./2. Numbers.py" font-size="25" width="300" height="400"></object></div>
+    <p class="output">Output</p>
+    7 <br>x: 2  y: 2.8  z: 3.0
   </div>
   <div class="dvs">
     <h1>String</h1>
     <div class="cntnt"><object data="./3. String.py" font-size="25" width="300" height="400"></object></div>
+    <p class="output">Output</p>
+    Lorem ... <br>e <br>llo <br>..13 <br>HELLO, WORLD! <br>Hello, World!Hello, World! <br>True <br>No, 'expensive' is NOT present. <br>I want 3 pieces of item 567 for 49.95 dollars. <br>'1  \2 <br>3       4 <br>
   </div>
 </div>
 
@@ -49,10 +55,14 @@
   <div class="dvs">
     <h1>List & Set</h1>
     <div class="cntnt"><object data="./4. List-Touple-Set.py" font-size="25" width="300" height="400"></object></div>
+    <p class="output">Output</p>
+    #
   </div>
   <div class="dvs">
     <h1>Dictionary</h1>
     <div class="cntnt"><object data="./5. Dictionary.py" font-size="25" width="300" height="400"></object></div>
+    <p class="output">Output</p>
+    #
   </div>
 </div>
 
@@ -62,10 +72,14 @@
   <div class="dvs">
     <h1>Loops</h1>
     <div class="cntnt"><object data="./6. Loops.py" font-size="25" width="300" height="400"></object></div>
+    <p class="output">Output</p>
+    a is greater than b <br>4 <br>5 <br>apple <br>cherry <br>0 <br>1 <br>1 4 <br>
   </div>
   <div class="dvs">
     <h1>Functions</h1>
     <div class="cntnt"><object data="./7. Functions.py" font-size="25" width="300" height="400"></object></div>
+    <p class="output">Output</p>
+    Emil-Refsnes <br>Lowest number is-2 <br>followed by-35 <br>15 <br>22 <br>
   </div>
 </div>
 
@@ -75,10 +89,14 @@
   <div class="dvs">
     <h1>Class & Obj</h1>
     <div class="cntnt"><object data="./8.Classes & Objects.py" font-size="25" width="300" height="400"></object></div>
+    <p class="output">Output</p>
+    40
   </div>
   <div class="dvs">
     <h1>Inheritance</h1>
     <div class="cntnt"><object data="./9. Inheritance.py" font-size="25" width="300" height="400"></object></div>
+    <p class="output">Output</p>
+    John Doe
   </div>
 </div>
 
